src/objects/PBS_Training_Plan_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <label>Training Plan</label>
        <referenceTo>PBS_Training_Plan__c</referenceTo>
        <relationshipName>Training_Plan_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Plan_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PBS_Training Plan Feedback</label>
    <nameField>
        <displayFormat>TPF-{0000000}</displayFormat>
        <label>Training Plan Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS_Training Plan Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>